# Game-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Game Engine.sln  README.md
Game Engine/: Collider.cpp  CollisionDetection.cpp  Game Engine.filters  Game Engine.vcxproj  Game Engine.vcxproj.filters  GameObject.cpp  GameObject.h  IDrawable.h  Model.cpp  Model.h  Primitive.cpp  Primitive.h  Scene.cpp  Shader.cpp  Shader.h  Timer.cpp  Timer.h  camera.cpp  camera.h  constants.h  glad.c  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  texture.cpp  texture.h  vertShader.vs  vertex.cpp  vertex.h
includes/glad/: glad.h
src/: Collider.h  Cube.cpp  GameObject.cpp  Primitive.cpp  Shader.cpp  camera.cpp  glad.c  main.cpp  material.cpp  mesh.cpp  output  texture.cpp
src/dev_data/shaders/: fragShader.fs
src/game_constructs/: GameObject.cpp  GameObject.h
src/game_constructs/primitives/: Cube.cpp  Cube.h
src/globals/: Scene.cpp  Scene.h  camera.cpp  camera.h
src/graphics/: IDrawable.cpp  Shader.cpp  mesh.h  texture.cpp  texture.h  vertex.h
src/physics/: Collider.h  CollisionDetection.h
